[gd_scene load_steps=3 format=3 uid="uid://b3wn0yj7sfv05"]

[ext_resource type="Script" path="res://Scripts/StartMenu.gd" id="1_ylkdf"]
[ext_resource type="FontFile" uid="uid://56kabaq45qkg" path="res://Textures/Font.png" id="2_7yqlb"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ylkdf")

[node name="JEFFERYADVENTURE" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -257.5
offset_top = 199.0
offset_right = 257.5
offset_bottom = 276.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_7yqlb")
theme_override_font_sizes/normal_font_size = 56
text = "Jeffery's Adventure"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TheMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -71.5
offset_right = 50.5
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="TheMenu"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="TheMenu"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="TheMenu"]
layout_mode = 2
text = "Quit"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background Color" type="ColorRect" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.140447, 0.140447, 0.140447, 1)

[node name="OptionsTitle" type="RichTextLabel" parent="Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.5
offset_top = -224.0
offset_right = 35.5
offset_bottom = -201.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 30
text = "OPTIONS"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="OptionsMenu" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -170.0
offset_right = 310.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="Options/OptionsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Testing Option"

[node name="BackOptions" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 160.0
offset_right = 50.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[connection signal="pressed" from="TheMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TheMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="TheMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/BackOptions" to="." method="_on_back_options_pressed"]
